--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Dogs</string>
-    <string name="error_internet_connection">Check Internet Connection</string>
-    <string name="desc_dog">Dog picture</string>
+    <string name="error_internet_connection">Patikrinkite Interneto ryšį.</string>
+    <string name="desc_dog">Šuns nuotrauka</string>
+    <string name="error_picture_loading">Atsiprašome, nepavyko atvaizduoti nuotraukos</string>
 </resources>
